<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nomadic Food</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Popular">Popular</string>
    <string name="AZ">A-Z</string>
    <string name="NearBy">Near By</string>
    <string name="Category">Category</string>
    <string name="List">List</string>
    <string name="Map">Map</string>
    <string name="title_activity_shop_detail_view">DetailView</string>
    <string name="title_activity_shop_category_view">ShopCategoryView</string>
    <string name="title_activity_shop_map_view">ShopMapView</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_send_feedback">SendFeedback</string>
    <string name="enable_gps">Please Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">Please enable GPS Access </string>
    <string name="not_support_network">Please enable GPS Acess through mobile Network</string>
    <string name="Loading"> Loading..</string>

</resources>